--- a/locales/zh.json
+++ b/locales/zh.json
@@ -1,4 +1,7 @@
 {
+	"1": "1",
+	"3": "3",
+	"sms_code_fail": "验证码失效",
 	"phone_exists": "用户已存在",
 	"phone_not_exists": "用户不存在",
 	"ref_not_exists": "推荐人不存在",
