--- a/locales/zh.json
+++ b/locales/zh.json
@@ -6,6 +6,7 @@
 	"phone_not_exists": "用户不存在",
 	"ref_not_exists": "推荐人不存在",
 	"verify_error": "验证码错误",
+	"verify_not_exist": "请先获取验证码",
 	"passwd_error": "密码错误",
 	"welcom_back": "登陆成功，欢迎回来",
 	"reg_fail": "注册失败，请重新注册",
